Commit markdown update

--- a/via_time.ipynb
+++ b/via_time.ipynb
@@ -697,7 +697,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unique Values in Columns"
+    "### Unique Values in Columns\n",
+    "\n",
+    "First we need to normalize the route_names column because it's a mess with upper- and lowercase.\n",
+    "\n",
+    "<font color=purple>This dropped unique values in route_name from 286 to 238, removing starting numbers further reduced unique route names to 228, removing hyphens to 194.</font>"
    ]
   },
   {
@@ -706,9 +710,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we need to normalize the route_names column because it's a mess with upper- and lowercase\n",
-    "# This dropped unique values in route_name from 286 to 238, numbers further to 228, hyphens to 194\n",
-    "\n",
     "time.route_name = time.route_name.str.lower()\n",
     "time.route_name = time.route_name.str.replace(r'^\\d+', '', regex=True)\n",
     "time.route_name = time.route_name.str.replace('-', '').str.strip()"
@@ -905,6 +906,13 @@
    ],
    "source": [
     "time.groupby(['route', 'route_name'])[['route_name']].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color=purple>We still see that there are only 97 unique routes but 194 unique route names. Further normalization of route names needed.</font>**"
    ]
   },
   {
@@ -1266,7 +1274,7 @@
    "source": [
     "### There are 4 Primo routes in the dataset? Man, Fredricksburg primo has 3 different names for Primo route!\n",
     "\n",
-    "It's becoming obvious that route_name needs to be normalized, so the routes match the names. There are different names in the dataset for the same routes."
+    "**<font color=purple>It's becoming obvious that route_name needs to be normalized, so the routes match the names. There are different names in the dataset for the same routes.</font>**"
    ]
   },
   {
@@ -1709,7 +1717,7 @@
     }
    ],
    "source": [
-    "# Create subset\n",
+    "# Grouby route\n",
     "\n",
     "df.groupby('route')[['early_departure', 'late_arrival', 'missing', 'otp']].agg(['min', 'max', 'mean', 'median'])"
    ]
@@ -2135,6 +2143,8 @@
     }
    ],
    "source": [
+    "# Route with worst on time percentage\n",
+    "\n",
     "df[df.route == 7].head(1)"
    ]
   },
@@ -2214,6 +2224,8 @@
     }
    ],
    "source": [
+    "# Route with second worst on time percentage\n",
+    "\n",
     "df[df.route == 97].head(1)"
    ]
   },
