Commit move of sql review notebook into new repo and minor pandas change

--- a/pandas_series_lesson.ipynb
+++ b/pandas_series_lesson.ipynb
@@ -7,12 +7,12 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#The-Pandas-Series\" data-toc-modified-id=\"The-Pandas-Series-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>The Pandas Series</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-Is-a-Pandas-Series?\" data-toc-modified-id=\"What-Is-a-Pandas-Series?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span><strong><font color=\"red\">What Is a Pandas Series?</font></strong></a></span></li><li><span><a href=\"#So-What's-So-Great-About-a-Pandas-Series?\" data-toc-modified-id=\"So-What's-So-Great-About-a-Pandas-Series?-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span><strong><font color=\"orange\">So What's So Great About a Pandas Series?</font></strong></a></span></li></ul></li><li><span><a href=\"#Methods\" data-toc-modified-id=\"Methods-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Methods</a></span><ul class=\"toc-item\"><li><span><a href=\"#.head()-and-.tail()\" data-toc-modified-id=\".head()-and-.tail()-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span><code>.head()</code> and <code>.tail()</code></a></span></li><li><span><a href=\"#.value_counts()\" data-toc-modified-id=\".value_counts()-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span><code>.value_counts()</code></a></span></li><li><span><a href=\"#.isin()\" data-toc-modified-id=\".isin()-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span><code>.isin()</code></a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#The-Pandas-Series\" data-toc-modified-id=\"The-Pandas-Series-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>The Pandas Series</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-Is-a-Pandas-Series?\" data-toc-modified-id=\"What-Is-a-Pandas-Series?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span><strong><font color=\"red\">What Is a Pandas Series?</font></strong></a></span></li><li><span><a href=\"#So-What's-So-Great-About-a-Pandas-Series?\" data-toc-modified-id=\"So-What's-So-Great-About-a-Pandas-Series?-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span><strong><font color=\"orange\">So What's So Great About a Pandas Series?</font></strong></a></span></li></ul></li><li><span><a href=\"#Methods\" data-toc-modified-id=\"Methods-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Methods</a></span><ul class=\"toc-item\"><li><span><a href=\"#.head()-and-.tail()\" data-toc-modified-id=\".head()-and-.tail()-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span><code>.head()</code> and <code>.tail()</code></a></span></li><li><span><a href=\"#.value_counts()\" data-toc-modified-id=\".value_counts()-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span><code>.value_counts()</code></a></span></li><li><span><a href=\"#.isin()\" data-toc-modified-id=\".isin()-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span><code>.isin()</code></a></span></li></ul></li><li><span><a href=\"#Attributes\" data-toc-modified-id=\"Attributes-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Attributes</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,23 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "red       2\n",
-       "blue      1\n",
        "yellow    1\n",
-       "violet    1\n",
        "indigo    1\n",
-       "orange    1\n",
+       "violet    1\n",
        "green     1\n",
+       "blue      1\n",
+       "orange    1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,23 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "red       0.250\n",
-       "blue      0.125\n",
        "yellow    0.125\n",
-       "violet    0.125\n",
        "indigo    0.125\n",
-       "orange    0.125\n",
+       "violet    0.125\n",
        "green     0.125\n",
+       "blue      0.125\n",
+       "orange    0.125\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,23 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "green     0.125\n",
        "orange    0.125\n",
-       "indigo    0.125\n",
-       "violet    0.125\n",
-       "yellow    0.125\n",
        "blue      0.125\n",
+       "green     0.125\n",
+       "violet    0.125\n",
+       "indigo    0.125\n",
+       "yellow    0.125\n",
        "red       0.250\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
